<resources>
    <string name="app_name">Currency Converter</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="amount">Amount</string>
    <string name="btnConvert">Convert</string>
    <string name="message_txt_result">1 EUR = 11 MAD</string>
    <string-array name="currency_codes">
        <item>CAD</item>
        <item>EUR</item>
        <item>HKD</item>
        <item>ISK</item>
        <item>PHP</item>
        <item>DKK</item>
        <item>HUF</item>
        <item>CZK</item>
        <item>AUD</item>
        <item>RON</item>
        <item>SEK</item>
        <item>IDR</item>
        <item>INR</item>
        <item>BRL</item>
        <item>RUB</item>
        <item>HRK</item>
        <item>JPY</item>
        <item>THB</item>
        <item>CHF</item>
        <item>SGD</item>
        <item>PLN</item>
        <item>BGN</item>
        <item>CNY</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>ZAR</item>
        <item>USD</item>
        <item>MXN</item>
        <item>ILS</item>
        <item>GBP</item>
        <item>KRW</item>
        <item>MYR</item>
    </string-array>
</resources>