<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/idto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        app:layout_constraintStart_toStartOf="@+id/idSpinnerTo"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/idfrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        app:layout_constraintStart_toStartOf="@+id/idSpinnerFrom"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAmount"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/amount"
        app:layout_constraintBottom_toBottomOf="@+id/idSpinnerFrom"
        app:layout_constraintEnd_toStartOf="@+id/idSpinnerFrom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/idSpinnerFrom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amountText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <Spinner
        android:id="@+id/idSpinnerFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/currency_codes"
        android:padding="15dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/idSpinnerTo"
        app:layout_constraintTop_toBottomOf="@+id/idfrom" />

    <Spinner
        android:id="@+id/idSpinnerTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/currency_codes"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idto" />

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btnConvert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idSpinnerTo" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/message_txt_result"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btnConvert"
        app:layout_constraintEnd_toStartOf="@+id/btnConvert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnConvert" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btnConvert"
        app:layout_constraintEnd_toStartOf="@+id/btnConvert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnConvert"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>